adicionado indice para navegação

--- a/general.org
+++ b/general.org
@@ -2,6 +2,26 @@
 #+author: Ulisses Silva
 #+description: "Minha outra configuração pessoal"
 
+* Índice :toc_2:
+  - [[#programas-para-inciarem-primeiro][Programas para inciarem primeiro]]
+  - [[#company][Company]]
+  - [[#dashboard][Dashboard]]
+  - [[#flycheck][Flycheck]]
+  - [[#ivy-counsel][Ivy (Counsel)]]
+  - [[#configurações-do-emacs][Configurações do emacs]]
+  - [[#org-mode][Org mode]]
+  - [[#tema][Tema]]
+  - [[#disable-eletric-ident][Disable eletric ident]]
+  - [[#expansão-de-tags-no-org-mode][Expansão de tags no org mode]]
+  - [[#função-pra-recarregar-a-configuração-emacs][Função pra recarregar a configuração emacs]]
+  - [[#sudo-edit][sudo-edit]]
+  - [[#raibow-mode][Raibow Mode]]
+  - [[#eshell][Eshell]]
+  - [[#vterm][Vterm]]
+  - [[#doom-modeline][Doom-modeline]]
+  - [[#projectile][Projectile]]
+  - [[#languages][Languages]]
+  - [[#neotree][Neotree]]
 
 ** Programas para inciarem primeiro
 
@@ -10,16 +30,25 @@
 
 #+begin_src emacs-lisp
 
-        (defvar elpaca-installer-version 0.11)
-      (defvar elpaca-directory (expand-file-name "elpaca/" user-emacs-directory))
-      (defvar elpaca-builds-directory (expand-file-name "builds/" elpaca-directory))
-      (defvar elpaca-repos-directory (expand-file-name "repos/" elpaca-directory))
-      (defvar elpaca-order '(elpaca :repo "https://github.com/progfolio/elpaca.git"
+      (defvar elpaca-installer-version 0.11)
+      (defvar elpaca-directory
+        (expand-file-name "elpaca/" user-emacs-directory))
+      (defvar elpaca-builds-directory
+        (expand-file-name "builds/" elpaca-directory))
+      (defvar elpaca-repos-directory
+        (expand-file-name "repos/" elpaca-directory))
+      (defvar elpaca-order '(elpaca :repo
+                              "https://github.com/progfolio/elpaca.git"
                                     :ref nil :depth 1 :inherit ignore
-                                    :files (:defaults "elpaca-test.el" (:exclude "extensions"))
-                                    :build (:not elpaca--activate-package)))
-      (let* ((repo  (expand-file-name "elpaca/" elpaca-repos-directory))
-             (build (expand-file-name "elpaca/" elpaca-builds-directory))
+                                    :files
+                                    (:defaults "elpaca-test.el"
+                                               (:exclude "extensions"))
+                                    :build
+                                    (:not elpaca--activate-package)))
+      (let*
+          ((repo  (expand-file-name "elpaca/" elpaca-repos-directory))
+             (build
+              (expand-file-name "elpaca/" elpaca-builds-directory))
              (order (cdr elpaca-order))
              (default-directory repo))
         (add-to-list 'load-path (if (file-exists-p build) build repo))
@@ -27,25 +56,50 @@
           (make-directory repo t)
           (when (<= emacs-major-version 28) (require 'subr-x))
           (condition-case-unless-debug err
-              (if-let* ((buffer (pop-to-buffer-same-window "*elpaca-bootstrap*"))
-                        ((zerop (apply #'call-process `("git" nil ,buffer t "clone"
-                                                        ,@(when-let* ((depth (plist-get order :depth)))
-                                                            (list (format "--depth=%d" depth) "--no-single-branch"))
-                                                        ,(plist-get order :repo) ,repo))))
-                        ((zerop (call-process "git" nil buffer t "checkout"
-                                              (or (plist-get order :ref) "--"))))
-                        (emacs (concat invocation-directory invocation-name))
-                        ((zerop (call-process emacs nil buffer nil "-Q" "-L" "." "--batch"
-                                              "--eval" "(byte-recompile-directory \".\" 0 'force)")))
+              (if-let*
+                  ((buffer
+                    (pop-to-buffer-same-window "*elpaca-bootstrap*"))
+                        ((zerop (apply #'call-process `("git" nil
+                                                        ,buffer t
+                                                        "clone"
+                                                        ,@(when-let*
+                                                              ((depth
+                                                                (plist-get
+                                                                 order
+                                                                 :depth)))
+                                                            (list
+                                                             (format
+                                                              "--depth=%d"
+                                                              depth)
+                                                             "--no-single-branch"))
+                                                        ,(plist-get
+                                                          order :repo)
+                                                        ,repo))))
+                        ((zerop (call-process "git" nil buffer t
+                                              "checkout"
+                                              (or
+                                               (plist-get order :ref)
+                                               "--"))))
+                        (emacs
+                         (concat invocation-directory invocation-name))
+                        ((zerop (call-process emacs nil buffer nil
+                                              "-Q" "-L" "." "--batch"
+                                              "--eval"
+                                              "(byte-recompile-directory \".\" 0 'force)")))
                         ((require 'elpaca))
                         ((elpaca-generate-autoloads "elpaca" repo)))
-                  (progn (message "%s" (buffer-string)) (kill-buffer buffer))
-                (error "%s" (with-current-buffer buffer (buffer-string))))
-            ((error) (warn "%s" err) (delete-directory repo 'recursive))))
+                  (progn
+                    (message "%s" (buffer-string))
+                    (kill-buffer buffer))
+                (error "%s"
+                       (with-current-buffer buffer (buffer-string))))
+            ((error) (warn "%s" err)
+             (delete-directory repo 'recursive))))
         (unless (require 'elpaca-autoloads nil t)
           (require 'elpaca)
           (elpaca-generate-autoloads "elpaca" repo)
-          (let ((load-source-file-function nil)) (load "./elpaca-autoloads"))))
+          (let ((load-source-file-function nil))
+            (load "./elpaca-autoloads"))))
       (add-hook 'after-init-hook #'elpaca-process-queues)
       (elpaca `(,@elpaca-order))
 
@@ -76,7 +130,8 @@
     ;;Turns off elpaca-use-package-mode current declaration
     ;;Note this will cause evaluate the declaration immediately. It is not deferred.
     ;;Useful for configuring built-in emacs features.
-    (use-package emacs :ensure nil :config (setq ring-bell-function #'ignore))
+    (use-package emacs :ensure
+      nil :config (setq ring-bell-function #'ignore))
 
 #+end_src
 
@@ -85,11 +140,13 @@
 #+begin_src emacs-lisp
 
   (use-package all-the-icons
-  :ensure t
+  :ensure
+  t
   :if (display-graphic-p))
 
 (use-package all-the-icons-dired
-  :hook (dired-mode . (lambda () (all-the-icons-dired-mode t))))
+  :hook
+  (dired-mode . (lambda () (all-the-icons-dired-mode t))))
 
 #+end_src
 
@@ -120,7 +177,8 @@
 ;; This sets the default font on all graphical frames created after restarting Emacs.
 ;; Does the same thing as 'set-face-attribute default' above, but emacsclient fonts
 ;; are not right unless I also add this method of setting the default font.
-(add-to-list 'default-frame-alist '(font . "JetBrainsMono Nerd Font Mono-12"))
+(add-to-list 'default-frame-alist
+             '(font . "JetBrainsMono Nerd Font Mono-12"))
 
 ;; Uncomment the following line if line spacing needs adjusting.
 (setq-default line-spacing 0.12)
@@ -139,13 +197,16 @@
 
 #+begin_src emacs-lisp
   (use-package general
-    :ensure t
+    :ensure
+    t
     :config
      (general-create-definer leader-def
-       :prefix "C-c")
+       :prefix
+       "C-c")
 
    (leader-def 
-;; Atalhos de arquivo
+;; Atalhos de
+     arquivo
     "f"  '(:ignore t :which-key "arquivos") ;; Grupo (requer which-key)
     "ff" 'find-file
     "fs" 'save-buffer
@@ -186,7 +247,8 @@ pacote para autocomplete com <tab>
 #+begin_src emacs-lisp
 
 (use-package company
-  :defer 2
+  :defer
+  2
   :diminish
   :custom
   (company-begin-commands '(self-insert-command))
@@ -197,7 +259,8 @@ pacote para autocomplete com <tab>
   (global-company-mode t))
 
 (use-package company-box
-  :after company
+  :after
+  company
   :diminish
   :hook (company-mode . company-box-mode))
 
@@ -208,12 +271,14 @@ pacote para autocomplete com <tab>
 #+begin_src emacs-lisp
 
 (use-package dashboard
-  :ensure t 
+  :ensure
+  t 
   :init
   (setq initial-buffer-choice 'dashboard-open)
   (setq dashboard-set-heading-icons t)
   (setq dashboard-set-file-icons t)
-  (setq dashboard-banner-logo-title "Emacs Is More Than A Text Editor!")
+  (setq dashboard-banner-logo-title
+        "Emacs Is More Than A Text Editor!")
   (setq dashboard-startup-banner 'logo) ;; use standard emacs logo as banner
   ;;(setq dashboard-startup-banner "/home/dt/.config/emacs/images/emacs-dash.png")  ;; use custom image as banner
   (setq dashboard-center-content nil) ;; set to 't' for centered content
@@ -235,7 +300,8 @@ pacote para autocomplete com <tab>
 #+begin_src emacs-lisp
 
 (use-package flycheck
-:ensure t
+:ensure
+t
 :defer 1
 :diminish
 :init (global-flycheck-mode))
@@ -250,7 +316,8 @@ pacote para autocomplete com <tab>
 
 #+begin_src emacs-lisp
 (use-package counsel
-  :after ivy
+  :after
+  ivy
   :config (counsel-mode))
 
 (use-package ivy
@@ -266,11 +333,13 @@ pacote para autocomplete com <tab>
   (ivy-mode))
 
 (use-package all-the-icons-ivy-rich
-  :ensure t
+  :ensure
+  t
   :init (all-the-icons-ivy-rich-mode 1))
 
 (use-package ivy-rich
-  :after ivy
+  :after
+  ivy
   :ensure t
   :init (ivy-rich-mode 1) ;; this gets us descriptions in M-x.
   :custom
@@ -295,7 +364,7 @@ pacote para autocomplete com <tab>
   (global-set-key (kbd "<C-wheel-down>") 'text-scale-decrease)
 #+end_src
 
-** Configurações de interface
+** Configurações do emacs
 
 *** Desabilita os menus
 #+begin_src emacs-lisp
@@ -311,13 +380,22 @@ pacote para autocomplete com <tab>
   (global-visual-line-mode t)
 #+end_src
 
+*** Move os arquivos de backup do emacs (os que terminam com "~" ou "#file#") pra uma localização definida
+
+#+begin_src emacs-lisp
+
+(setq backup-directory-alist '((".*" . "~/.Trash")))
+
+#+end_src
+
 ** Org mode
 
 habilta o indice
 
 #+begin_src emacs-lisp
   (use-package toc-org
-    :commands toc-org-enable
+    :commands
+    toc-org-enable
     :init (add-hook 'org-mode-hook 'toc-org-enable))
 #+end_src
 
@@ -340,7 +418,8 @@ habilta o indice
 
 #+begin_src emacs-lisp
   (use-package catppuccin-theme
-  :ensure t
+  :ensure
+  t
   :config
    (load-theme 'catppuccin t))
   
@@ -429,7 +508,8 @@ terminal escrito em lisp integrado com o emacs
 #+begin_src emacs-lisp
 
 (use-package eshell-syntax-highlighting
-  :after esh-mode
+  :after
+  esh-mode
   :config
   (eshell-syntax-highlighting-global-mode +1))
 
@@ -438,7 +518,8 @@ terminal escrito em lisp integrado com o emacs
 ;; eshell-aliases-file -- sets an aliases file for the eshell.
   
 (setq eshell-rc-script (concat user-emacs-directory "eshell/profile")
-      eshell-aliases-file (concat user-emacs-directory "eshell/aliases")
+      eshell-aliases-file
+      (concat user-emacs-directory "eshell/aliases")
       eshell-history-size 5000
       eshell-buffer-maximum-lines 5000
       eshell-hist-ignoredups t
@@ -467,7 +548,8 @@ um terminal mais parecido com os terminais para o emacs
 #+begin_src emacs-lisp
 
 (use-package vterm-toggle
-  :after vterm
+  :after
+  vterm
   :bind ("<f5>" . vterm-toggle)
   :config
   (setq vterm-toggle-fullscreen-p nil)
@@ -477,8 +559,10 @@ um terminal mais parecido com os terminais para o emacs
                      (let ((buffer (get-buffer buffer-or-name)))
                        (with-current-buffer buffer
                          (or (equal major-mode 'vterm-mode)
-                             (string-prefix-p vterm-buffer-name (buffer-name buffer))))))
-                  (display-buffer-reuse-window display-buffer-at-bottom)
+                             (string-prefix-p vterm-buffer-name
+                                              (buffer-name buffer))))))
+                  (display-buffer-reuse-window
+                   display-buffer-at-bottom)
                   ;;(display-buffer-reuse-window display-buffer-in-direction)
                   ;;display-buffer-in-direction/direction/dedicated is added in emacs27
                   ;;(direction . bottom)
@@ -495,7 +579,8 @@ sincroniza as variáveis de ambiente
 #+begin_src emacs-lisp
 
 (use-package exec-path-from-shell
-  :ensure t
+  :ensure
+  t
   :config
   ;; Garante que o PATH e outras variáveis sejam copiadas do shell do sistema
   (when (memq window-system '(mac ns x))
@@ -508,7 +593,8 @@ sincroniza as variáveis de ambiente
 #+begin_src emacs-lisp
 
 (use-package doom-modeline
-  :ensure t
+  :ensure
+  t
   :init (doom-modeline-mode 1))
   ;; :hook (after-init . doom-modeline-mode))
 
@@ -542,7 +628,8 @@ sincroniza as variáveis de ambiente
 #+begin_src emacs-lisp
 
 (use-package elpy
-:ensure t
+:ensure
+t
 :init
 (elpy-enable))
 
@@ -555,14 +642,26 @@ sincroniza as variáveis de ambiente
 (use-package alchemist
 :config
 (setq 
-   alchemist-mix-command "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/mix"
-   alchemist-execute-command "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/elixir"
-   alchemist-iex-program-name "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/iex"
+   alchemist-mix-command
+   "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/mix"
+   alchemist-execute-command
+   "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/elixir"
+   alchemist-iex-program-name
+   "~/.local/share/mise/installs/elixir/1.19.4-otp-28/bin/iex"
   
 ))
 
 #+end_src
 
+*** Emacs lisp
+
+elisp formatter
+
+#+begin_src emacs-lisp
+
+(use-package elisp-autofmt)
+
+#+end_src
 
 ** Neotree
 
